// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`zone Form Component should render a new Zone form 1`] = `
<div>
  <form
    class="cds--form form-0-2-3 form-react"
    novalidate=""
  >
    <div
      class=""
      name="zone-information-subform"
    >
      <div>
        <h3>
          Zone Information
        </h3>
      </div>
      <div
        class="cds--form-item cds--text-input-wrapper"
      >
        <div
          class="cds--text-input__label-wrapper"
        >
          <label
            class="cds--label"
            dir="auto"
            for="name"
          >
            <span
              aria-hidden="true"
              class="ddorg__carbon-component-mapper_is-required isRequired-0-2-5"
            >
              *
            </span>
            Name
          </label>
        </div>
        <div
          class="cds--text-input__field-outer-wrapper"
        >
          <div
            class="cds--text-input__field-wrapper"
          >
            <input
              class="cds--text-input"
              id="name"
              maxlength="50"
              name="name"
              type="text"
              value=""
            />
            
            <span
              aria-atomic="true"
              aria-live="assertive"
              class="cds--text-input__counter-alert"
              role="alert"
            />
          </div>
        </div>
      </div>
      <div
        class="cds--form-item cds--text-input-wrapper"
      >
        <div
          class="cds--text-input__label-wrapper"
        >
          <label
            class="cds--label"
            dir="auto"
            for="description"
          >
            <span
              aria-hidden="true"
              class="ddorg__carbon-component-mapper_is-required isRequired-0-2-5"
            >
              *
            </span>
            Description
          </label>
        </div>
        <div
          class="cds--text-input__field-outer-wrapper"
        >
          <div
            class="cds--text-input__field-wrapper"
          >
            <input
              class="cds--text-input"
              id="description"
              maxlength="50"
              name="description"
              type="text"
              value=""
            />
            
            <span
              aria-atomic="true"
              aria-live="assertive"
              class="cds--text-input__counter-alert"
              role="alert"
            />
          </div>
        </div>
      </div>
      <div
        class="cds--form-item cds--text-input-wrapper"
      >
        <div
          class="cds--text-input__label-wrapper"
        >
          <label
            class="cds--label"
            dir="auto"
            for="settings.proxy_server_ip"
          >
            SmartProxy Server IP
          </label>
        </div>
        <div
          class="cds--text-input__field-outer-wrapper"
        >
          <div
            class="cds--text-input__field-wrapper"
          >
            <input
              class="cds--text-input"
              id="settings.proxy_server_ip"
              maxlength="50"
              name="settings.proxy_server_ip"
              type="text"
              value=""
            />
            
            <span
              aria-atomic="true"
              aria-live="assertive"
              class="cds--text-input__counter-alert"
              role="alert"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class=""
      name="settings"
    >
      <div>
        <h3>
          Settings
        </h3>
      </div>
      <div
        class="cds--form-item"
      >
        <div
          class="cds--select"
        >
          <label
            class="cds--label"
            dir="auto"
            for="settings.concurrent_vm_scans"
          >
            Max Active VM Scans
          </label>
          <div
            class="cds--select-input__wrapper"
          >
            <select
              class="cds--select-input"
              id="settings.concurrent_vm_scans"
              name="settings.concurrent_vm_scans"
              title="Unlimited"
            >
              <option
                class="cds--select-option"
                label="Unlimited"
                value="0"
              >
                Unlimited
              </option>
              <option
                class="cds--select-option"
                label="1"
                value="1"
              >
                1
              </option>
              <option
                class="cds--select-option"
                label="2"
                value="2"
              >
                2
              </option>
              <option
                class="cds--select-option"
                label="3"
                value="3"
              >
                3
              </option>
              <option
                class="cds--select-option"
                label="4"
                value="4"
              >
                4
              </option>
              <option
                class="cds--select-option"
                label="5"
                value="5"
              >
                5
              </option>
              <option
                class="cds--select-option"
                label="10"
                value="10"
              >
                10
              </option>
              <option
                class="cds--select-option"
                label="15"
                value="15"
              >
                15
              </option>
              <option
                class="cds--select-option"
                label="20"
                value="20"
              >
                20
              </option>
              <option
                class="cds--select-option"
                label="25"
                value="25"
              >
                25
              </option>
              <option
                class="cds--select-option"
                label="30"
                value="30"
              >
                30
              </option>
              <option
                class="cds--select-option"
                label="35"
                value="35"
              >
                35
              </option>
              <option
                class="cds--select-option"
                label="40"
                value="40"
              >
                40
              </option>
              <option
                class="cds--select-option"
                label="45"
                value="45"
              >
                45
              </option>
              <option
                class="cds--select-option"
                label="50"
                value="50"
              >
                50
              </option>
            </select>
            <svg
              aria-hidden="true"
              class="cds--select__arrow"
              fill="currentColor"
              focusable="false"
              height="16"
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 11 3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
              />
            </svg>
            
          </div>
        </div>
      </div>
    </div>
    <div
      class="cds--btn-set"
    >
      <button
        class="cds--btn cds--btn--primary cds--btn--disabled"
        disabled=""
        type="submit"
        variant="primary"
      >
        Add
      </button>
      <button
        class="cds--btn cds--btn--secondary"
        type="button"
      >
        Cancel
      </button>
    </div>
  </form>
</div>
`;

exports[`zone Form Component should render editing a zone form 1`] = `
<div>
  <form
    class="cds--form form-0-2-3 form-react"
    novalidate=""
  >
    <div
      class=""
      name="zone-information-subform"
    >
      <div>
        <h3>
          Zone Information
        </h3>
      </div>
      <div
        class="cds--form-item cds--text-input-wrapper"
      >
        <div
          class="cds--text-input__label-wrapper"
        >
          <label
            class="cds--label cds--label--disabled"
            dir="auto"
            for="name"
          >
            <span
              aria-hidden="true"
              class="ddorg__carbon-component-mapper_is-required isRequired-0-2-5"
            >
              *
            </span>
            Name
          </label>
        </div>
        <div
          class="cds--text-input__field-outer-wrapper"
        >
          <div
            class="cds--text-input__field-wrapper"
          >
            <input
              class="cds--text-input"
              disabled=""
              id="name"
              maxlength="50"
              name="name"
              type="text"
              value="test add zone name"
            />
            
            <span
              aria-atomic="true"
              aria-live="assertive"
              class="cds--text-input__counter-alert"
              role="alert"
            />
          </div>
        </div>
      </div>
      <div
        class="cds--form-item cds--text-input-wrapper"
      >
        <div
          class="cds--text-input__label-wrapper"
        >
          <label
            class="cds--label"
            dir="auto"
            for="description"
          >
            <span
              aria-hidden="true"
              class="ddorg__carbon-component-mapper_is-required isRequired-0-2-5"
            >
              *
            </span>
            Description
          </label>
        </div>
        <div
          class="cds--text-input__field-outer-wrapper"
        >
          <div
            class="cds--text-input__field-wrapper"
          >
            <input
              class="cds--text-input"
              id="description"
              maxlength="50"
              name="description"
              type="text"
              value="test add zone"
            />
            
            <span
              aria-atomic="true"
              aria-live="assertive"
              class="cds--text-input__counter-alert"
              role="alert"
            />
          </div>
        </div>
      </div>
      <div
        class="cds--form-item cds--text-input-wrapper"
      >
        <div
          class="cds--text-input__label-wrapper"
        >
          <label
            class="cds--label"
            dir="auto"
            for="settings.proxy_server_ip"
          >
            SmartProxy Server IP
          </label>
        </div>
        <div
          class="cds--text-input__field-outer-wrapper"
        >
          <div
            class="cds--text-input__field-wrapper"
          >
            <input
              class="cds--text-input"
              id="settings.proxy_server_ip"
              maxlength="50"
              name="settings.proxy_server_ip"
              type="text"
              value=""
            />
            
            <span
              aria-atomic="true"
              aria-live="assertive"
              class="cds--text-input__counter-alert"
              role="alert"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class=""
      name="settings"
    >
      <div>
        <h3>
          Settings
        </h3>
      </div>
      <div
        class="cds--form-item"
      >
        <div
          class="cds--select"
        >
          <label
            class="cds--label"
            dir="auto"
            for="settings.concurrent_vm_scans"
          >
            Max Active VM Scans
          </label>
          <div
            class="cds--select-input__wrapper"
          >
            <select
              class="cds--select-input"
              id="settings.concurrent_vm_scans"
              name="settings.concurrent_vm_scans"
              title="Unlimited"
            >
              <option
                class="cds--select-option"
                label="Unlimited"
                value="0"
              >
                Unlimited
              </option>
              <option
                class="cds--select-option"
                label="1"
                value="1"
              >
                1
              </option>
              <option
                class="cds--select-option"
                label="2"
                value="2"
              >
                2
              </option>
              <option
                class="cds--select-option"
                label="3"
                value="3"
              >
                3
              </option>
              <option
                class="cds--select-option"
                label="4"
                value="4"
              >
                4
              </option>
              <option
                class="cds--select-option"
                label="5"
                value="5"
              >
                5
              </option>
              <option
                class="cds--select-option"
                label="10"
                value="10"
              >
                10
              </option>
              <option
                class="cds--select-option"
                label="15"
                value="15"
              >
                15
              </option>
              <option
                class="cds--select-option"
                label="20"
                value="20"
              >
                20
              </option>
              <option
                class="cds--select-option"
                label="25"
                value="25"
              >
                25
              </option>
              <option
                class="cds--select-option"
                label="30"
                value="30"
              >
                30
              </option>
              <option
                class="cds--select-option"
                label="35"
                value="35"
              >
                35
              </option>
              <option
                class="cds--select-option"
                label="40"
                value="40"
              >
                40
              </option>
              <option
                class="cds--select-option"
                label="45"
                value="45"
              >
                45
              </option>
              <option
                class="cds--select-option"
                label="50"
                value="50"
              >
                50
              </option>
            </select>
            <svg
              aria-hidden="true"
              class="cds--select__arrow"
              fill="currentColor"
              focusable="false"
              height="16"
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 11 3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
              />
            </svg>
            
          </div>
        </div>
      </div>
    </div>
    <div
      class="cds--btn-set"
    >
      <button
        class="cds--btn cds--btn--primary cds--btn--disabled"
        disabled=""
        type="submit"
        variant="primary"
      >
        Save
      </button>
      <button
        class="cds--btn cds--btn--secondary cds--btn--disabled"
        disabled=""
        type="button"
      >
        Reset
      </button>
      <button
        class="cds--btn cds--btn--secondary"
        type="button"
      >
        Cancel
      </button>
    </div>
  </form>
</div>
`;
